Commented out investigation of JSON structure for increased readability within GitHub

--- a/Industry_Sales_Analysis.ipynb
+++ b/Industry_Sales_Analysis.ipynb
@@ -6,7 +6,7 @@
       "name": "Industry Sales Analysis.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPSsJ+BY28RAikhia6m0cSz"
+      "authorship_tag": "ABX9TyNkAb8XpXCXxQYvMf0s50Cr"
     },
     "kernelspec": {
       "name": "python3",
@@ -125,7 +125,7 @@
       "source": [
         "req_dict = req.json()\n",
         "# Check JSON levels\n",
-        "req_dict['GET_STATS_DATA']"
+        "#req_dict['GET_STATS_DATA']"
       ],
       "execution_count": 4,
       "outputs": [
